Thu Jun 25 11:18:25 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* Makefile.am: Support for extensions

Thu Jun 18 12:09:38 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* random.c (mix_pool): simpler handling for level 0

Mon Jun 15 14:40:48 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* tiger.c: Removed from dist, will reappear as dynload module

Sat Jun 13 14:16:57 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* pubkey.c: Major changes to allow extensions. Changed the inteface
	of all public key ciphers and added the ability to load extensions
	on demand.

	* misc.c: Removed.

Wed Jun 10 07:52:08 1998  Werner Koch,mobil,,,	(wk@tobold)

	* dynload.c: New.
	* cipher.c: Major changes to allow extensions.

Mon Jun  8 22:43:00 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* cipher.c: Major internal chnages to support extensions.
	* blowfish.c (blowfish_get_info): New and made all internal
	functions static, changed heder.
	* cast5.c (cast5_get_info): Likewise.

Mon Jun  8 12:27:52 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* tiger.c (transform): Fix for big endian

	* cipher.c (do_cfb_decrypt): Big endian fix.

Fri May 22 07:30:39 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* md.c (md_get_oid): Add a new one for TIGER.

Thu May 21 13:24:52 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* cipher.c: Add support for a dummy cipher

Thu May 14 15:40:36 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* rmd160.c (transform): fixed sigbus - I should better
	add Christian von Roques's new implemenation of rmd160_write.

Fri May  8 18:07:44 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* rand-internal.h, rand-unix.c, rand-w32.c, rand_dummy.c: New
	* random.c: Moved system specific functions to rand-****.c

Fri May  8 14:01:17 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* random.c (fast_random_poll): add call to gethrtime.

Tue May  5 21:28:55 1998  Werner Koch  (wk@isil.d.shuttle.de)

	* elgamal.c (elg_generate): choosing x was not correct, could