@@ -1,3 +1,7 @@
+Thu Jul  2 10:50:30 1998  Werner Koch  (wk@isil.d.shuttle.de)
+
+	* cipher.c (cipher_open): algos >=100 use standard CFB
+
 Thu Jun 25 11:18:25 1998  Werner Koch  (wk@isil.d.shuttle.de)
 
 	* Makefile.am: Support for extensions
